packages/language/src/__tests__/__fixtures__/invalid/invalid-time-range.eligian
// Test fixture: Invalid time range (T038)
// Should trigger validation error: "Timeline event start time must be less than or equal to end time"

timeline "test" in ".test-container" using raf {
  // Invalid: start > end
  at 10s..5s [
    selectElement("#element")
    addClass("visible")
  ] [
    removeClass("visible")
  ]
}
